# flask_with_celery

./: docker-compose.yml  manage.py  pyproject.toml  requirements.txt
compose/local/flask/celery/beat/: start
compose/local/flask/celery/flower/: start
compose/local/flask/celery/worker/: start
project/: __init__.py  config.py
project/users/: models.py
